--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <span class="icon-bar"></span>
   </button>
 
-  <a class="navbar-brand" href="#"><img alt="Tutor2You, LLC" src="assets/images/logo-wordmark.svg"></a>
+  <a class="navbar-brand" href="#"><img alt="Tutor2You, LLC" src="assets/images/logo-wordmark.svg" style="width:100%;"></a>
 </div>
 
 <!-- Collect the nav links, forms, and other content for toggling -->
