--- a/index.html
+++ b/index.html
@@ -231,13 +231,9 @@
       <div id="cta-block" class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
         <div class="cta">
           <div id="cta-headline">
-            <p>Empowering students to take ownership of their academic success. Contact us today to learn how!</p>
+            <p>Empowering students to take ownership of their academic success. Contact us today to learn how!<br/>Call us at: <a href="tel:513-225-5492">513-225-5492</a></p>
           </div>
-          <div id="cta-button">
-            <a href="mailto:tutor2youllc@gmail.com" class="purple action-button animate">Learn More</a>
-          </div>
-
-        </div>
+       </div>
       </div>
     </div>
   </div>
