--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div id="welcome-copy" class="centered">
   <span id="swappable-title"><span>We know the challenges faced by today’s students.</span></span>
   <div id="cta-button">
-    <a href="mailto:tutor2youllc@gmail.com?Subject=Tutoring%20Services" class="light-purple action-button animate">Learn More</a>
+    <a href="mailto:infotutor2youllc@gmail.com?Subject=Tutoring%20Services" class="light-purple action-button animate">Learn More</a>
   </div>
 </div>
 </section><!--/home-->
